force-app/main/default/objects/Trainer_Assignment__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <description>Active field for Fitness Tracker.</description>
    <label>Active</label>
    <defaultValue>true</defaultValue>
    <type>Checkbox</type>
</CustomField>