force-app/main/default/objects/Trainer_Assignment__c/fields/Client_Profile__c.field-meta.xml
<CustomField>
    <fullName>Client_Profile__c</fullName>
    <description>Client Profile field for Fitness Tracker.</description>
    <label>Client Profile</label>
    <type>MasterDetail</type>
    <referenceTo>Client_Profile__c</referenceTo>
    <relationshipLabel>Trainer Assignments</relationshipLabel>
    <relationshipName>TrainerAssignments</relationshipName>
</CustomField>