force-app/main/default/objects/Trainer_Assignment__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>End Date field for Fitness Tracker.</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>