force-app/main/default/objects/Trainer_Assignment__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>Role field for Fitness Tracker.</description>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet><valueSetDefinition><sorted>false</sorted>
    <value><fullName>Primary</fullName><default>true</default><label
        >Primary</label></value>
    <value><fullName>Secondary</fullName><default>false</default><label
        >Secondary</label></value>
    <value><fullName>Nutrition</fullName><default>false</default><label
        >Nutrition</label></value>
    <value><fullName>Physio</fullName><default>false</default><label
        >Physio</label></value>
    </valueSetDefinition></valueSet>
</CustomField>